# news_analys_rs

./: .gitignore  Cargo.toml  README.md  data_example.json  stop_words.txt
src/: get_data.rs  lib.rs  main.rs  summarizer.rs
