[package]
name = "news_analys_rs"
version = "0.1.0"
authors = ["Oleh <olehbozhok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stemmer_uk = {git = "https://github.com/olehbozhok/stemmer_uk"}
lazy_static = "1.4.0"
unicode-segmentation = "1.7.1"
ndarray="0.14.0"
stemmer = "0.3.2"
serde_json="1.0.59"
whatlang = "0.11.1"
rayon = "1.5"